<resources>
    <string name="app_name">Padhai madad</string>
    <string name="app_name_upper_case">PADHAI MADAD</string>
    <string name="company_name">NimbleQ</string>
    <string name="class_not_avail">Class not available for your selected slot\nPlease change your slot and try again, or you can request a class</string>
    <string name="slot_not_avail">Slot not available for your selected subject\nPlease change it from settings and try again</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="class_txt">Class</string>
    <string name="announcements">Announcements</string>
    <string name="group_chat">Group chat</string>
    <string name="title_activity_doubts">DoubtsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_administration">AdministrationActivity</string>
    <string name="select_grade">Select grade</string>
    <string name="announcement_edittext_title">Announcement title</string>
    <string name="your_announcement">Your announcement</string>
    <string name="attach_a_file">Attach a file</string>
    <string name="submit">submit</string>
    <string name="request_class">Request class</string>
    <string name="class_name">Class name</string>
    <string name="subject">Subject</string>
    <string name="basic_info_topic">Basic class and topic info</string>
    <string name="add_zoom_meeting">Add zoom meeting</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="meeting_pass">Meeting password</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="phone_number">Phone number</string>
    <string name="current_slot">Current slot</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="app_will_send_a_message_with_otp">Padhai madad will send you a messege with OTP</string>
    <string name="feedback">Feedback</string>
    <string name="fill_details">Please fill the details</string>
    <string name="enter_user_name">Please enter your name</string>
    <string name="enter_school_name">Enter School name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_slot">Create slot</string>
    <string name="profile_info">Profile info</string>
    <string name="name1">Name:</string>
    <string name="phone_number1">Phone number:</string>
    <string name="subject_and_time_slot">Subject and time slot</string>
    <string name="slot">00:00 • Subject • topic</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="account">Account</string>
    <string name="not_available">N/A</string>
    <string name="logout">Logout</string>
    <string name="teacher1">Teacher:</string>
    <string name="subject1">Subject:</string>
    <string name="topic1">Topic:</string>
    <string name="grade1">Grade:</string>
    <string name="rate_this_class">Rate this class</string>
    <string name="basic_info">Basic info</string>
    <string name="type_a_msg">Type a messege</string>
    <string name="topic">Topic</string>
    <string name="doubt_in_one_line">Doubt in one line</string>
    <string name="describe_your_doubt">Describe your doubt</string>
    <string name="your_answer">Your answer</string>
    <string name="joined_class_list">Joined class list</string>
    <string name="created_class_list">Created class list</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="add_answer">Add answer</string>
    <string name="answers">Answers</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="notification_will_be_sent_to_teacher">A notification will be sent to the teacher</string>
    <string name="teacher_preference">Teacher preference</string>
    <string name="send">Send</string>
    <string name="enter_data">Enter data</string>
    <string name="select_time_slot">Select time slot</string>
    <string name="login_as">Login as</string>
    <string name="learner">Learner</string>
    <string name="teacher">Teacher</string>
    <string name="select_your_subject">Select your subject</string>
    <string name="enter_your_topic_chapter">Enter your topic/chapter</string>
    <string name="save">Save</string>
    <string name="open_class">Open class</string>
    <string name="close">close</string>
    <string name="app_language_title">App language</string>
    <string name="app_language_desc">Tap to change language</string>
    <string name="user_details">User details</string>
    <string name="teacher_ratings">Teacher rating</string>
    <string name="limits">Limits</string>
    <string name="ratings">Ratings</string>
    <string name="learners">Learners</string>
    <string name="doubts">Doubts</string>
    <string name="post_doubts">Post Doubts</string>
    <string name="submit_answer">Submit answer</string>
    <string name="language">Language</string>
    <string name="settings_app">App</string>
    <string name="about_app">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms">Terms of service</string>
    <string name="open_source_license">Open source license</string>
    <string name="select_file">Select File</string>
    <string name="image">Image</string>
    <string name="pdf">PDF</string>
    <string name="audio">Audio</string>
    <string name="field_required">Field required</string>
    <string name="success">Success</string>
    <string name="announcement_uploaded">Announce has been uploaded</string>
    <string name="files_not_uploaded">Files not uploaded yet</string>
    <string name="your_classes">Your Classes</string>
    <string name="class_requests">Class Requests</string>
    <string name="classes">Classes</string>
    <string name="joined_classes">Joined classes</string>
    <string name="create_class">Create class</string>
    <string name="enter_class_name">Please enter class name</string>
    <string name="please_enter_topic">Please enter topic</string>
    <string name="please_select_grade">Please select grade</string>
    <string name="processing">Processing</string>
    <string name="create_zoom_meeting">Create zoom meeting</string>
    <string name="create_zoom_meeting_msg">Please open zoom and create a recurring meeting for this class\nAnd paste the meeting info below</string>
    <string name="open">open</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="view_class">View class</string>
    <string name="view_class_msg">Click to view avaibale classes</string>
    <string name="solve_doubts">Solve doubts</string>
    <string name="solve_doubts_msg">Click to solve your doubts</string>
    <string name="view_joined_class">View joined classes</string>
    <string name="view_joined_class_msg">Click to view classes you have joined</string>
    <string name="view_your_class_requests">View your class requests</string>
    <string name="view_your_class_requests_msg">Click to view your class requests</string>
    <string name="create_class_msg">Click to view available class slots</string>
    <string name="view_doubts">View doubts</string>
    <string name="view_doubts_msg">Click to view learners doubts</string>
    <string name="view_your_class">View your classes</string>
    <string name="view_your_class_msg">Click to view classes you have created</string>
    <string name="view_class_requests">View class requests</string>
    <string name="view_class_requests_msg">Click to view available class requests</string>
    <string name="sending_otp">Sending OTP…</string>
    <string name="account_created">Account created</string>
    <string name="login_successful">Login successful</string>
    <string name="registration">Registration</string>
    <string name="enter_school">Please enter your school</string>
    <string name="select_state">Please select your state</string>
    <string name="select_city">Please select your city</string>
    <string name="slots">Slots</string>
    <string name="available_slots">Available slots</string>
    <string name="settings">Settings</string>
    <string name="announcements_not_avail">Announcements not available</string>
    <string name="post_announcements">Post announcement</string>
    <string name="users_not_avail">Users not available</string>
    <string name="no_user_avail_for_this_filter">No user available for this filter</string>
    <string name="join_meeting">Join meeting</string>
    <string name="join_class_as_host">Join class as Host</string>
    <string name="join_class_msg_1">Joining class as host is not supported in this app\nYou have to join it from zoom app\nMEETING ID: </string>
    <string name="join_class_msg_2">MEETING PASSWORD: </string>
    <string name="class_joined">Class joined</string>
    <string name="join_class">Join class</string>
    <string name="feedback_msg">How was your experience in class </string>
    <string name="are_you_sure_you_want_to_join_this_meeting">Are you sure you want to join this meeting</string>
    <string name="join">join</string>
    <string name="fetching_details">Fetching details…</string>
    <string name="grade2">Grade: </string>
    <string name="lives_in_1">Lives in: </string>
    <string name="gender_2">Gender: </string>
    <string name="school_2">School: </string>
    <string name="rate">Rate</string>
    <string name="leave_class">Leave class</string>
    <string name="leave_class_msg">Are you sure you want to leave this class\nAfter leaving you will not receive any updates about this class</string>
    <string name="leave">leave</string>
    <string name="failed_to_get_phone_number">Failed to get phone number</string>
    <string name="feedback_msg_1">How was your experience with</string>
    <string name="chat_with_teacher">Chat with teacher</string>
    <string name="chat_with_teacher_whatsapp">Chat with teacher on whatsapp</string>
    <string name="open_whatsapp">open whatsapp</string>
    <string name="send_a_photo">Send a photo</string>
    <string name="files">Files</string>
    <string name="images">Images</string>
    <string name="all">All</string>
    <string name="limit_reached">Limit Reached!</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="type_a_message">Please type a message</string>
    <string name="photo">Photo</string>
    <string name="me">me</string>
    <string name="uploading_files">Uploading files</string>
    <string name="rate_and_feedback">Rate and feedback</string>
    <string name="feedback_submitted">Feedback submitted</string>
    <string name="feedback_submitted_msg">Thanks for submitting your feedback</string>
    <string name="please_enter_a_subject">Please enter subject</string>
    <string name="please_enter_short_desc">Please enter short description</string>
    <string name="please_enter_desc">Please enter description</string>
    <string name="doubt_submitted">Doubt has been submitted</string>
    <string name="file_already_added">File already added</string>
    <string name="has_answered_doubt"> has answered your doubt</string>
    <string name="answer_has_been_submitted">Answer has been submitted</string>
    <string name="answers_not_available">Answers not available</string>
    <string name="select_your_filter">Select your filter</string>
    <string name="filter_by_grade">Filter by grade</string>
    <string name="filter_by_gender">Filter by gender</string>
    <string name="filter_by_state">Filter by state</string>
    <string name="filter_by_city">Filter by city</string>
    <string name="select_gender">Select gender</string>
</resources>